k8s/base/namespace.yaml
# isolating the stack
apiVersion: v1
kind: Namespace
metadata:
  name: foobar-namespace
  labels:
    app: foobar-api
