k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: foobar-service
  namespace: foobar-namespace
spec:
  selector:
    app: foobar-api
  ports:
    - protocol: TCP
      port: 443
      targetPort: 8080 # Matches the port we forced in the Deployment
