k8s/base/network-policy.yaml
# allow ingress only from Traefik
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-allow-traefik
  namespace: foobar-namespace
spec:
  podSelector:
    matchLabels:
      app: foobar-api
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          # match the label "app: traefik" from Traefik deployment
          app: traefik
